--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build --turbopack --no-lint",
     "start": "next start",
     "lint": "eslint"
   },
+
+
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.2",
     "@types/react-redux": "^7.1.34",
