--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_BASE_URL=https://job-task-2-backend.vercel.app/api/v1
+NEXT_PUBLIC_API_BASE_URL=https://assistholdingltd.vercel.app/api/v1
