--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "start": "next start",
     "lint": "eslint"
   },
-
-
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.2",
     "@types/react-redux": "^7.1.34",
@@ -17,7 +15,7 @@
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "^15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
