--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_API_BASE_URL=https://assistholdingsltd.com/api/api/v1
+# NEXT_PUBLIC_API_BASE_URL=https://assistholdingsltd.com/api/api/v1
+NEXT_PUBLIC_API_BASE_URL=https://assistholdingsltdcom-backend.vercel.app/api/v1
 # NEXT_PUBLIC_API_BASE_URL=http://localhost:5008/api/v1
